--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tailwindcss/vite": "^4.1.18",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -56,12 +58,17 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.319",
     "react-resizable-panels": "^2.1.7",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
     "recharts": "2.15.4",
     "resend": "^6.9.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
